@@ -1,0 +1,4 @@
+<?xml version="1.0" ?>
+ <tileset firstgid="1" name="Untitled" tilewidth="101" tileheight="171" spacing="2" margin="2">
+  <image source="ortho-test1.png"/>
+ </tileset>
