@@ -11,6 +11,7 @@ version 0.99.1 - XX-MMM-2010
  . TMX: TMXTileMap supports any kind of objects, like CCSprite (issue #700, #765)
  . TMX: TMXLayer uses the opacity defined for the layer (issue #785)
  . TMX: TMXLayer supports Tiled offset property (issue #616)
+ . TMX: Added support for .tsx tilesets (issue #619)
  . Transition: new added transitions: CCRadialCCWTransition, CCRadialCWTransition (issue #783)
  . Xcode: hardware reques in .plist: doesn't contain disabled features. Seems to be a bun in Xcode 3.2.2 (issue #769)
  
